--- a/www/index.html
+++ b/www/index.html
@@ -190,7 +190,11 @@
 
     // ButtonBがクリックされた時の処理
     function btnBClick(e){
-      active=false;
+      if(active==true){
+        active=false;
+      }else{
+        active=true;
+      }
         
         
     }
@@ -208,7 +212,7 @@
  
     // 繰り返し実行する処理
     function timer(){  
-      if(active){
+      if(active==true){
         var time=parseInt((new Date()-startTime)/1000);
         var rest=period - time;
         $("#time").html("経過時間:"+time);
